--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.0.5  # Ensure this is present
   cupertino_icons: ^1.0.6
   saferide_app_ui_3710154493_f2f:
     git: https://f2f.bostonux.com/packages/saferide_app_ui_3710154493_f2f
